# pfbench

./: .gitignore  AGENTS.md  CODEX_PHASE_PLAN.md  Makefile  README.md  environment.yml  paper_IEEE.tex  pyproject.toml
configs/: dataset.yaml  openai.yaml  release_v1.yaml  solver.yaml  validation.yaml
datasets/: README.md
datasets/pfbench/v1/: CHECKSUMS.sha256  FAIR_METADATA.json  FIELD_DICTIONARY.md  LICENSE_AND_REDISTRIBUTION.md  QUALITY_REPORT.md  README.md  RELEASE_NOTES.md  SCHEMA_DOCS.md  SUBMISSION_FRAMING.md  VALIDATION_SUMMARY.json  manifest.json  questions.jsonl  reference_question_item.json  reference_scenario_record.json  report.md
docs/: architecture.md  benchmark_spec.md  data_provenance.md  scientific_writing_development_guide.md
examples/: demo_cross_validation_report.md  demo_cross_validation_results.jsonl  demo_cross_validation_summary.json  demo_manifest.json  demo_questions.jsonl  demo_scenarios.jsonl  reference_question_item.json  reference_scenario_record.json
reports/: pfbench_demo_report.md
schemas/: question_item.schema.json  scenario_record.schema.json
src/pfbench/: cli.py  release.py  utils.py
src/pfbench/evaluation/: __init__.py  leaderboard.py  report.py
src/pfbench/generation/: __init__.py  factory.py  questions.py
src/pfbench/grading/: __init__.py  core.py
src/pfbench/io/: __init__.py  config.py  jsonl.py
tests/: test_cases.py  test_cli_smoke.py  test_cross_validation.py  test_generation_pipeline.py  test_imports.py  test_release_package.py  test_schema_validation.py  test_solver_core.py
(+9 files in other folders)
