[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfbench"
version = "0.5.0"
description = "Self-contained power-flow benchmark dataset factory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "pydantic>=2",
  "pyyaml",
  "typer",
  "rich",
  "jsonschema",
  "openai>=1.0",
]

[project.scripts]
pfbench = "pfbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
